css/styles.css
/* =============================================================================
   My CSS
   ========================================================================== */

/* ---- imports ---- */
@import url(https://fonts.googleapis.com/css?family=Averia+Serif+Libre&effect=outline);
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
@import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css);
@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css);

/* ---- base ---- */
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,body{
	width: 100%;
	height: 100%;
}


body{
  font-family: Averia Serif Libre, sans-serif;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  color: #f8f8f8;
}

canvas{
  display: block;
  vertical-align: bottom;
}

h1{
  font-size: 45px;
  font-size: 9vmin;
  display: inline-block;
  width: 100%;
  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
}

nav a{
  color: #f8f8f8;
}

nav a:hover{
  color: blue;
}

nav {
  background-color: rgba(111, 119, 132, 0.8);
  width: 100%;
  z-index: 10;
}

ul{
  list-style-type: none;
}



/* ---- My Classes ---- */
.more-content {
  display: none;
}

.visible {
  display: block;
}

/* ---- MAIN ----*/
#site-nav {
  border: 5px solid gray;
  position: fixed;
}
#navbar-header{
  width: 100%;
}
#brand-icon{
  width: 40px;
  height: 40px;
  vertical-align: bottom;
  cursor: pointer;
}

#nav-links{
  border: 2px solid pink;
  width: 85%;
}

#homepage-main{
  background-image: url("../img/Forest.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
  width: 100%;
  height: 100%;
  border-bottom: 10px solid black;
}

#particles-js{
  width: 100%;
  height: 100%;
  position: absolute;
}

#homepage-content{
  border: 2px solid white;
  position: absolute;
  bottom: 40px;
  left: 40px;
}


#cv-main{
  width: 100%;
  background-color: #4a4a4a;
}
#cv-top h1{
  border-bottom: 1px solid #fafafa;
  margin: 25px 0;
  color: steelblue;
}
#cv-top h1 span{
  text-shadow: none;
  font-size: 15px;
  color: black;
}
#cv-top h4{
  color: steelblue;
  border-bottom: 1px solid #fafafa;
}

#contact-info{
  border: 2px solid white;
  padding: 1px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -ms-flex-pack: distribute;
  justify-content: space-around;
}
#contact-info span{
  color: steelblue;
}

#bioPic{
  margin-bottom: 10px;
  width: 200px;
  border: 2px solid gray;
}

#languages-list{
  padding-left: 0;
}

#languages-list li:nth-child(even){
  float: right;
  width: 40%;
}
#languages-list li:nth-child(odd){
  float: left;
  width: 60%;
}

#cv-entries .description{
  color: black;
}

#cv-entries h4{
  color: gray;
  border-bottom: 1px solid gray;
}

#cv-entries ul > :first-child{
  color: #1199c3;
  font-size: 18px;
}

#cv-entries .row:nth-child(odd){
  background-color: white;
  color: gray;
}

#cv-entries .row:nth-child(even){
  background-color: #4a4a4a;
  color: white;
}

.dates{
  font-style: italic;
  font-size: 14px;
  color: gray;
}
#cv-entries .location {
  float: right;
  color: gray;
}

#cv-entries span{
  font-size: 14px;
  color: black;
}

/*.title, .title a {
  color: #1199c3;
}*/

/*#cv-main{
  width: 100%;
  height: 100%;
  border-top: 10px solid black;
  background-color: #4a4a4a;
}


#cv-main h1,
#cv-main h4,
#contact-info span{
  color: steelblue;
}

#cv-main h4{
  border-bottom: 1px solid #fafafa;
}

#cv-header{
  border-bottom: 1px solid #fafafa;
  margin: 25px 0;
}

#cv-header span{
  text-shadow: none;
  font-size: 15px;
  color: black;
}

#contact-info{
  border: 2px solid white;
  padding: 1px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -ms-flex-pack: distribute;
  justify-content: space-around;
}
#skills{
  background-color: #4a4a4a;
}

#bioPic{
  margin-bottom: 10px;
  width: 200px;
  border: 2px solid gray;
}

#languages-list{
  padding-left: 0;
}

#languages-list li:nth-child(even){
  float: right;
  width: 40%;
}
#languages-list li:nth-child(odd){
  float: left;
  width: 60%;
}
*/
/*
#cv-entries .row:nth-child(odd){
  background-color: white;
  color: black;
}

#cv-entries .row:nth-child(even){
  background-color: #4a4a4a;
  color: white;
}

.dates{
  font-style: italic;
  font-size: 14px;
  color: gray;
}
.location{
  float: right;
}

.description{
  clear: right;
  color: black;
}

.title, .title a {
  color: #1199c3;
}*/
/*

.work-description{
  clear: right;
  color: black;
}*/

/*#education-history {
  background-color: #4a4a4a;
}*/
/*#education-history .visible-content ul:nth-child(even){
  background-color:  #52565b;
}
#education-history .more-content ul:nth-child(odd){
  background-color:  #52565b;
}*/
/*.education-name a{
  font-size: 18px;
  color: white;
}
.education-major{
  color: black;
}

.education-degree{
  color: #1199c3;
  margin-left: 5px;
  font-size: 14px;
}


}*/
/*
#completed-courses {
  background-color: white;
  color: gray;
}
.course-entry:nth-child(even){
  background-color: #f7f9ff;
  color: white;
}*/
/*
.course-title{
  color: #1199c3;
}

.course-description{
  clear: right;
  color: black;
}*/

#portfolio-projects{
  text-align: center;
}
#portfolio-projects img{
  width: 100%;
}



/*navbar icon*/
#nav-icon {
  right: 15px;
  width: 60px;
  /*height: 45px;*/
  position: absolute;
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
}
#nav-icon span {
  display: block;
  position: absolute;
  height: 9px;
  width: 50%;
  background: #fafafa;
  opacity: 1;
  -webkit-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}
#nav-icon span:nth-child(even) {
  left: 50%;
  border-radius: 0 9px 9px 0;
}
#nav-icon span:nth-child(odd) {
  left:0px;
  border-radius: 9px 0 0 9px;
}
#nav-icon span:nth-child(1), #nav-icon span:nth-child(2) {
  top: 0px;
}
#nav-icon span:nth-child(3), #nav-icon span:nth-child(4) {
  top: 15px;
}
#nav-icon span:nth-child(5), #nav-icon span:nth-child(6) {
  top: 30px;
}
#nav-icon.open span:nth-child(1),#nav-icon.open span:nth-child(6) {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}
#nav-icon.open span:nth-child(2),#nav-icon.open span:nth-child(5) {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}
#nav-icon.open span:nth-child(1) {
  left: 5px;
  top: 7px;
}
#nav-icon.open span:nth-child(2) {
  left: calc(50% - 5px);
  top: 7px;
}
#nav-icon.open span:nth-child(3) {
  left: -50%;
  opacity: 0;
}
#nav-icon.open span:nth-child(4) {
  left: 100%;
  opacity: 0;
}
#nav-icon.open span:nth-child(5) {
  left: 5px;
  top: 29px;
}
#nav-icon.open span:nth-child(6) {
  left: calc(50% - 5px);
  top: 29px;
}


/* RESUME */
/*body,
div,
ul,
li,
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
  font-family: Averia Serif Libre, sans-serif;
}

.clear-fix {
  overflow: auto;
}

.education-entry,
.onlineCourse-entry,
.work-entry,
.project-entry {
  padding: 0 5%;
}

h1 {
  font-size: 40px;
  color: steelblue;
  line-height: 48px;
  display: inline;
}

h2 {
  font-weight: bold;
  font-size: 24px;
  color: #999;
  line-height: 29px;
  padding: 10px;
}

h3 {
  font-style: italic;
  font-size: 20px;
  color: #000;
  line-height: 22px;
}

h4 {
  font-weight: bold;
  font-size: 14px;
  color: #4a4a4a;
  line-height: 17px;
}

h2,
h3,
h4,
h5 {
  padding: 10px 5%;
}

.date-text {
  font-style: italic;
  font-size: 14px;
  color: #999;
  line-height: 16px;
  float: left;
}

.location-text {
  font-style: italic;
  font-size: 14px;
  color: #999;
  line-height: 16px;
  float: right;

}

p {
  font-size: 14px;
  color: #333;
  line-height: 21px;
}

a {
  color: #1199c3;
  text-decoration: none;
  margin-top: 10px;
  display: block;
}

.welcome-message {
  font-style: italic;
  font-size: 18px;
  color: #f3f3f3;
  line-height: 28px;
}

#languages-h3,
#skills-h3 {
  color: steelblue;
}

.blue {
  background-color: steelblue;
}

.blue-text {
  color: steelblue;
}

.white-text {
  font-weight: bold;
  color: #fff;
}

.gray {
  background-color: #f3f3f3;
  padding-bottom: 10px;
  clear: both;
}

.dark-gray {
  background-color: #4a4a4a;
}


#header,
#headerLanguages,
#headerSkills {
  background-color: #484848;
}

.flex-box {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  padding: 10px;
}

.flex-column {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: nowrap;
      flex-wrap: nowrap;
  padding: 10px;
}

.center-content {
  padding: 2.5% 5%;
}

ul {
  list-style-type: none;
}

.biopic {
  float: left;
  padding: 10px;
  width: 200px;
  display: none;
}

img {
  padding: 10px;
  width: 40%;
}

span {
  padding: 5px;
}

#footerMessage {
  text-align: center;
}

@media only screen and (max-width: 1024px) {
  #footerMessage {
    margin-top: 5%;
  }
}

@media only screen and (max-width:900px) {
  .biopic {
    width: 175px;
  }
}

@media only screen and (max-width: 750px) {
  #footerMessage {
    margin-top: 10%;
  }
  .biopic {
    width: 150px;
  }
  .welcome-message {
    display: none;
  }
}

#map {
  display: block;
  height: 100%;
  margin: 0 5%;
  background-color: steelblue;
}

#mapDiv {
  background-color: steelblue;
  height: 400px;
  width: 100%;
  padding-bottom: 5%;
}

@media only screen and (min-width: 750px) {
  #languages-h3,
  #skills-h3,
  .biopic {
    display: block;
  }
}*/
}

